@@ -1,4 +1,5 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
+<!-- $Id$ -->
 <html>
 <head>
 <jwc id="styleSheet"/>
@@ -6,7 +7,7 @@
 </head>
 <jwc id="body">
 
-<jwc id="selector"/>
+<jwc id="selector">
 
 <jwc id="viewTabs">
 
@@ -22,7 +23,11 @@
 <jwc id="showTemplate"/>
 </jwc>
 
+<jwc id="ifShowProperties">
+<jwc id="showProperties"/>
 </jwc>
 
+</jwc>
+</jwc>
 </jwc>
 </html>
